--- a/templates/satspot/satspot.html
+++ b/templates/satspot/satspot.html
@@ -4,7 +4,7 @@
     <center>
       <h3 class="q-my-none q-mb-xl"><span v-text="satspot.name"></span></h3>
     </center>
-    <div class="row">
+    <div class="row q-ma-md">
       <div class="col">
         <center>
           <q-badge outline size="xl" color="secondary">
@@ -14,6 +14,8 @@
           </q-badge>
         </center>
       </div>
+      </div>
+      <div class="row">
       <div class="col">
         <center>
           <q-badge outline size="xl" color="secondary">
@@ -81,173 +83,121 @@
   </q-card>
 </q-dialog>
 
+<q-dialog v-model="paymentTick" position="top">
+  <q-icon
+    name="check"
+    transition-show="fade"
+    class="text-light-green"
+    style="font-size: min(90vw, 40em)"
+  ></q-icon>
+</q-dialog>
+
 {% endblock %} {% block scripts %}
 <script>
   window.app = Vue.createApp({
-    el: '#vue',
+    el: "#vue",
     mixins: [windowMixin],
     data() {
       return {
         activeGame: false,
         gameComplete: false,
-        gameId: '',
+        satspotId: "{{ satspot_id }}",
+        paymentTick: false,
         satspot: {
-          name: '',
+          name: "",
           number_of_players: 0,
-          buy_in: 0
+          buy_in: 0,
         },
         satspot: {},
-        lnaddress: '',
+        lnaddress: "",
         qr: {
           show: false,
-          payment_request: '',
-          payment_hash: ''
-        }
-      }
+          payment_request: "",
+          payment_hash: "",
+        },
+      };
     },
     methods: {
       getQueryParam(param) {
-        const urlParams = new URLSearchParams(window.location.search)
-        return urlParams.get(param)
+        const urlParams = new URLSearchParams(window.location.search);
+        return urlParams.get(param);
       },
       async getGame() {
+        console.log(this.satspotId)
         const response = await LNbits.api.request(
-          'GET',
-          `/satspot/api/v1/satspot/satspot/${this.gameId}`,
-          ''
-        )
+          "GET",
+          `/satspot/api/v1/satspot/satspot/${this.satspotId}`,
+          "",
+        );
         if (response.data) {
+          console.log(response.data)
           this.satspot = response.data
+          this.satspot.closing_date = new Date(this.satspot.closing_date * 1000).toLocaleString()
           this.activeGame = true
         }
       },
       async joinGame() {
         try {
           const data = {
-            game_id: this.gameId,
+            satspot_id: this.satspotId,
             settings_id: this.satspotPageId,
-            ln_address: this.lnaddress
-          }
+            ln_address: this.lnaddress,
+          };
           const response = await LNbits.api.request(
-            'POST',
-            '/satspot/api/v1/satspot/join/',
-            '',
-            data
-          )
+            "POST",
+            "/satspot/api/v1/satspot/join/",
+            "",
+            data,
+          );
           if (response.data) {
-            this.qr.payment_request = response.data.payment_request
-            this.qr.payment_hash = response.data.payment_hash
-            this.qr.show = true
-            this.websocket()
+            this.qr.payment_request = response.data.payment_request;
+            this.qr.payment_hash = response.data.payment_hash;
+            this.qr.show = true;
+            this.websocket();
           }
         } catch (error) {
-          LNbits.utils.notifyApiError(error)
+          LNbits.utils.notifyApiError(error);
         }
       },
       websocket() {
-        const url = new URL(window.location)
-        url.protocol = url.protocol === 'https:' ? 'wss' : 'ws'
-        url.pathname = `/api/v1/ws/${this.qr.payment_hash}`
-        const ws = new WebSocket(url)
-        ws.addEventListener('message', async ({data}) => {
-          console.log(data)
-          dataArr = data.split(',')
-          if (dataArr[0] == 'paid') {
+        const url = new URL(window.location);
+        url.protocol = url.protocol === "https:" ? "wss" : "ws";
+        url.pathname = `/api/v1/ws/${this.qr.payment_hash}`;
+        const ws = new WebSocket(url);
+        ws.addEventListener("message", async ({ data }) => {
+          data = JSON.parse(data);
+          if (data['pending'] == false) {
             this.$q.notify({
-              type: 'positive',
-              message: 'Invoice Paid! Waiting for more players...'
-            })
-            this.qr.show = false
-            ws.close()
+              type: "positive",
+              message: "Invoice paid, you joined the game!",
+            });
+            this.qr.show = false;
+            this.paymentTick = true;
+            this.lnaddress = "";
+            ws.close();
           }
-          if (dataArr[0] == 'won') {
-            this.qr.show = false
-            this.satspotWinner = dataArr[1]
-            this.gameComplete = true
-            this.$q.notify({
-              type: 'positive',
-              message:
-                'You flipping won the satspot!!!\n' +
-                'Payment will be with you shortly'
-            })
-            this.confettiFireworks()
-            ws.close()
-          }
-          if (dataArr[0] == 'lost') {
-            this.$q.notify({
-              type: 'negative',
-              message: 'You lost! Good luck next time!'
-            })
-            this.qr.show = false
-            this.satspotWinner = dataArr[1]
-            this.gameComplete = true
-            ws.close()
-          }
-          if (dataArr[0] == 'refund') {
-            this.$q.notify({
-              type: 'negative',
-              message:
-                'Game was already full :( Refunding your sats (minus registration fee)'
-            })
-            this.qr.show = false
-            this.satspotWinner = dataArr[1]
-            this.gameComplete = true
-            ws.close()
-          } else {
-            console.log(data)
-          }
-        })
+        });
       },
       copyText() {
         Quasar.copyToClipboard(window.location.href).then(() => {
           Quasar.Notify.create({
-            message: 'Copied satspot link to clipboard!',
-            position: 'bottom'
-          })
-        })
+            message: "Copied satspot link to clipboard!",
+            position: "bottom",
+          });
+        });
       },
       copyInvoice() {
         Quasar.copyToClipboard(this.qr.payment_request).then(() => {
           Quasar.Notify.create({
-            message: 'Invoice URL copied to clipboard!',
-            position: 'bottom'
-          })
-        })
+            message: "Invoice URL copied to clipboard!",
+            position: "bottom",
+          });
+        });
       },
-      confettiFireworks() {
-        const duration = 3 * 1000
-        const animationEnd = Date.now() + duration
-        const defaults = {startVelocity: 30, spread: 360, ticks: 60, zIndex: 0}
-
-        function randomInRange(min, max) {
-          return Math.random() * (max - min) + min
-        }
-
-        const interval = setInterval(function () {
-          const timeLeft = animationEnd - Date.now()
-
-          if (timeLeft <= 0) {
-            return clearInterval(interval)
-          }
-
-          const particleCount = 5 * (timeLeft / duration)
-          // since particles fall down, start a bit higher than random
-          confetti({
-            ...defaults,
-            particleCount,
-            origin: {x: randomInRange(0.1, 0.3), y: Math.random() - 0.2}
-          })
-          confetti({
-            ...defaults,
-            particleCount,
-            origin: {x: randomInRange(0.7, 0.9), y: Math.random() - 0.2}
-          })
-        }, 250)
-      }
     },
     async mounted() {
-      this.getGame()
-    }
-  })
+      this.getGame();
+    },
+  });
 </script>
 {% endblock %}
