--- a/templates/satspot/index.html
+++ b/templates/satspot/index.html
@@ -4,16 +4,12 @@
 {% endblock %} {% block page %}
 <div class="row q-col-gutter-md">
   <div class="col-12 col-md-7 q-gutter-y-md">
-    <q-card>
-      <q-card-section>
-        <q-btn
-          class="q-mt-md q-ml-md"
-          @click="formDialogSatspot.show = true"
-          color="primary"
-          >Create satspot game</q-btn
-        >
-      </q-card-section>
-    </q-card>
+    <q-btn
+      class="q-ma-md"
+      @click="formDialogSatspot.show = true"
+      color="primary"
+      >Create satspot game</q-btn
+    >
 
     <q-card>
       <q-card-section>
@@ -37,10 +33,10 @@
             <q-tr :props="props">
               <q-th auto-width></q-th>
               <q-th
-                v-for="col in props.cols"
-                :key="col.name"
-                :props="props"
-                v-text="col.label"
+              v-for="col in props.cols"
+              :key="col.name"
+              :props="props" 
+              v-text="col.label"
               ></q-th>
               <q-th auto-width></q-th>
             </q-tr>
@@ -91,9 +87,7 @@
       </q-card-section>
       <q-card-section class="q-pa-none">
         <q-separator></q-separator>
-        <q-list>
-          {% include "satspot/_api_docs.html" %}
-        </q-list>
+        <q-list> {% include "satspot/_api_docs.html" %} </q-list>
       </q-card-section>
     </q-card>
   </div>
@@ -108,36 +102,57 @@
         <q-input
           filled
           dense
-          v-model.trim="formDialogSatspot.data.title"
+          v-model.trim="formDialogSatspot.data.name"
           type="text"
           label="Title *"
         ></q-input>
 
         <div class="row">
           <div class="col">
-            <q-input
-              class="q-pr-xs"
-              filled
-              dense
-              v-model.trim="formDialogSatspot.data.closing_date"
-              type="number"
-              label="Closing date"
-            ></q-input>
+
+            <q-input dense filled v-model="formDialogSatspot.data.closing_date">
+              
+              <template v-slot:prepend>
+                <q-icon name="event" class="cursor-pointer">
+                  <q-popup-proxy cover transition-show="scale" transition-hide="scale">
+                    <q-date v-model="formDialogSatspot.data.closing_date" mask="YYYY-MM-DD HH:mm">
+                      <div class="row items-center justify-end">
+                        <q-btn v-close-popup label="Close" color="primary" flat />
+                      </div>
+                    </q-date>
+                  </q-popup-proxy>
+                </q-icon>
+              </template>
+        
+              <template v-slot:append>
+                <q-icon name="access_time" class="cursor-pointer">
+                  <q-popup-proxy cover transition-show="scale" transition-hide="scale">
+                    <q-time v-model="formDialogSatspot.data.closing_date" mask="YYYY-MM-DD HH:mm" format24h>
+                      <div class="row items-center justify-end">
+                        <q-btn v-close-popup label="Close" color="primary" flat />
+                      </div>
+                    </q-time>
+                  </q-popup-proxy>
+                </q-icon>
+              </template>
+            </q-input>
+
           </div>
           <div class="col">
-          <q-select
-          filled
-          dense
-          emit-value
-          v-model="formDialogSatspot.data.wallet"
-          :options="g.user.walletOptions"
-          label="Wallet *"
-        ></q-select>
-      </div>
-
+            <q-select
+              filled
+              dense
+              emit-value
+              class="overflow-hidden q-pl-xs"
+              v-model="formDialogSatspot.data.wallet"
+              :options="g.user.walletOptions"
+              label="Wallet *"
+            ></q-select>
+          </div>
+        </div>
+        <div class="row">
           <div class="col">
             <q-input
-              class="q-pl-xs"
               filled
               dense
               v-model.trim="formDialogSatspot.data.buy_in"
@@ -152,7 +167,8 @@
               dense
               v-model.trim="formDialogSatspot.data.haircut"
               type="number"
-              label="Buy in"
+              max="50"
+              label="Haircut % (max 50)"
             ></q-input>
           </div>
         </div>
@@ -161,7 +177,7 @@
             unelevated
             color="primary"
             :disable="
-              formDialogSatspot.data.title == null || formDialogSatspot.data.number_of_players > satspotSettings.max_players || formDialogSatspot.data.buy_in > satspotSettings.max_bet"
+            formDialogSatspot.data.name == null || formDialogSatspot.data.closing_date == null || formDialogSatspot.data.wallet == null || formDialogSatspot.data.buy_in == null || formDialogSatspot.data.haircut > 50"
             type="submit"
             >Create satspot</q-btn
           >
