--- a/templates/satspot/satspot.html
+++ b/templates/satspot/satspot.html
@@ -76,7 +76,7 @@
   <q-card-section v-if="satspot.completed" class="q-pa-none">
     <center>
       <h2 class="q-my-none">Game Complete</h2>
-      <h5 class="q-my-none"><span v-text="winner"></span> won!</h5>
+      <h5 class="q-my-none"><span v-text="winner"></span></h5>
       <q-icon color="teal" name="check" size="30em"></q-icon>
     </center>
   </q-card-section>
@@ -222,6 +222,9 @@
     },
     async mounted() {
       await this.getGame()
+      if (this.winner != "No players"){
+        this.winner = `Winner: ${this.winner}`
+      }
     }
   })
 </script>
