--- a/templates/satspot/satspot.html
+++ b/templates/satspot/satspot.html
@@ -222,7 +222,7 @@
     },
     async mounted() {
       await this.getGame()
-      if (this.winner != "No players"){
+      if (this.winner != 'No players') {
         this.winner = `Winner: ${this.winner}`
       }
     }
